<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">房政通</string>
    <string name="action_settings">Settings</string>

    <string name="hello">Hello World, LoginActivity!</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_register_link">没有帐号？ <a href="#">注册</a></string>
    
    
    <string name="main_home">首页</string>	
    <string name="main_OA">OA办公</string>
	<string name="main_project">工程</string>
	<string name="main_checkin">入住</string>
	<string name="main_record">档案</string>
    
	
	<string name="gridview1">公文检索</string>
	<string name="gridview2">公文流程</string>
	<string name="gridview3">公文任务</string>
	<string name="gridview4">公文签</string>
	<string name="gridview5">已下载公文</string>
	
	
	<string name="proj_search_hint">请输入工程名</string>
	<string name="record_search_hint">请输入身份证号/档案号</string>
	<string name="checkin_search_hint">请输入身份证号/住房保障号</string>
	<string name="search_button">查询</string>
	
	<string name="file_search_hint">请输入公文标题</string>
	
	<string name="project_name">项目名称：</string>
	<string name="project_status">项目状态：</string>
	<string name="project_region">所属区县：</string>
	<string name="project_department">责任单位：</string>
	<string name="project_plan">计划套数：</string>
	<string name="project_real">实批套数：</string>
	<string name="project_where">建设地点：</string>
	<string name="project_property">土地性质：</string>
	
	<string-array name="search_file_spinner_items">
	    <item>公文名称</item>
	    <item>世间范围</item>
	</string-array>
	
	
</resources>
