<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/main_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                 android:background="@drawable/maintab_toolbar_bg" >

           <!--      <RadioButton
                    android:id="@+id/radio_main"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/title_city"
                    android:tag="radio_main"
                    android:text="@string/main_home" />
 -->
                <RadioButton
                    android:id="@+id/radio_oa"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/tab_trend"
                    android:tag="radio_oa"
                    android:text="@string/main_OA" />

                <RadioButton
                    android:id="@+id/radio_project"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/tab_index"
                    android:tag="radio_project"
                    android:text="@string/main_project" />

               
                <RadioButton
                    android:id="@+id/radio_checkin"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/title_city"
                    android:tag="radio_checkin"
                    android:text="@string/main_checkin" />

                <RadioButton
                    android:id="@+id/radio_record"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/tab_tools"
                    android:tag="radio_record"
                    android:text="@string/main_record" />
            </RadioGroup>
        </LinearLayout>
    </TabHost>


</LinearLayout>