<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/blusky"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/logo_login" />

    </RelativeLayout>

    <!--
       padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部
    -->

    
    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:gravity="center" 
        android:layout_gravity="center"
        android:background="@drawable/background_login_div_bg"
        android:padding="10dip"
        
         >

        <TextView
            android:id="@+id/login_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="15dp"
            android:text="@string/login_label_username" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/login_user_input"
            android:background="@drawable/login_editbox"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/login_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/password_edit"
            android:layout_alignBottom="@+id/password_edit"
            android:layout_alignLeft="@+id/login_user_input"
            android:layout_marginRight="6dp"
            android:text="@string/login_label_password"
		/>

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/login_password_input"
            android:background="@drawable/login_editbox"
            android:inputType="textPassword"
            android:password="true"
            android:singleLine="true" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_password_input"
            android:layout_alignRight="@+id/password_edit"
            android:layout_below="@+id/savePasswordCB"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style_white"
            android:text="@string/login_label_signin"
            android:layout_centerVertical="true" />

        <CheckBox
            android:id="@+id/savePasswordCB"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/signin_button"
            android:layout_below="@+id/password_edit"
            android:layout_marginTop="10dp"
            android:text="记住密码" />
    </RelativeLayout>

    
</LinearLayout>